--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Nov 15 13:17:00 CST 2016
+#Tue Jan 07 19:22:37 PST 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.8.1-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.14-bin.zip
+zipStoreBase=GRADLE_USER_HOME
